[gd_scene load_steps=12 format=4]

[ext_resource type="Script" path="res://Card System/card_visual_half.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://digp6hb3qgsjm" path="res://Art/CardShadowHalf.png" id="2"]
[ext_resource type="Shader" path="res://Shaders/fake_3d.gdshader" id="3"]
[ext_resource type="Texture2D" uid="uid://wgpxmfvxvitw" path="res://Art/CardBaseArtHalfYellow.png" id="4"]
[ext_resource type="Texture2D" uid="uid://61ip3v31x1he" path="res://Art/Card Artworks/Pickaxe.png" id="5"]
[ext_resource type="Texture2D" uid="uid://bw0mo7e7hcy1c" path="res://Art/Card Artworks/Scorium.png" id="6"]
[ext_resource type="Texture2D" uid="uid://8rw8rg408dnv" path="res://Art/CardBaseArtHalfBack.png" id="7"]
[ext_resource type="Texture2D" uid="uid://ciioqwj1jbde4" path="res://Art/FlashHalf.png" id="8"]
[ext_resource type="Texture2D" uid="uid://0hnob5jrf6oy" path="res://Art/ResourceValueIndicatorLarge.png" id="9"]
[ext_resource type="Texture2D" uid="uid://fn8cnenxfidv" path="res://Art/ScoreValueIndicatorLarge.png" id="10"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0whk0"]
resource_local_to_scene = true
shader = ExtResource("3")
shader_parameter/fov = 90.0
shader_parameter/cull_back = true
shader_parameter/y_rot = 0.0
shader_parameter/x_rot = 0.0
shader_parameter/inset = 0.0

[node name="CardVisualSmall" type="Control"]
custom_minimum_size = Vector2(228, 186)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -114.0
offset_top = -93.0
offset_right = 114.0
offset_bottom = 93.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(114, 168)
script = ExtResource("1")

[node name="Shadow" type="TextureRect" parent="."]
self_modulate = Color(1, 1, 1, 0.4784309864044189)
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = 15.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2")

[node name="Art Viewport" type="SubViewportContainer" parent="."]
material = SubResource("ShaderMaterial_0whk0")
custom_minimum_size = Vector2(228, 336)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = -76.0
offset_right = 2.0
offset_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(114, 168)

[node name="SubViewport" type="SubViewport" parent="Art Viewport"]
transparent_bg = true
handle_input_locally = false
canvas_item_default_texture_filter = 0
size = Vector2i(228, 336)
render_target_update_mode = 4

[node name="Art" type="Control" parent="Art Viewport/SubViewport"]
custom_minimum_size = Vector2(228, 186)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -114.0
offset_top = -93.0
offset_right = 114.0
offset_bottom = 93.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(114, 168)

[node name="Front" type="Control" parent="Art Viewport/SubViewport/Art"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -156.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(114, 168)

[node name="Base Art" type="TextureRect" parent="Art Viewport/SubViewport/Art/Front"]
layout_mode = 1
offset_right = 228.0
offset_bottom = 180.0
texture = ExtResource("4")
stretch_mode = 2

[node name="HalfCardArtwork" type="TextureRect" parent="Art Viewport/SubViewport/Art/Front"]
visible = false
layout_mode = 1
offset_top = 24.0
offset_right = 228.0
offset_bottom = 168.0
texture = ExtResource("5")

[node name="FullCardArtwork" type="TextureRect" parent="Art Viewport/SubViewport/Art/Front"]
layout_mode = 0
offset_top = -78.0
offset_right = 228.0
offset_bottom = 174.0
texture = ExtResource("6")

[node name="Back" type="Control" parent="Art Viewport/SubViewport/Art"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Back" type="TextureRect" parent="Art Viewport/SubViewport/Art/Back"]
custom_minimum_size = Vector2(228, 186)
layout_mode = 1
offset_right = 228.0
offset_bottom = 186.0
pivot_offset = Vector2(114, 93)
texture = ExtResource("7")
stretch_mode = 2

[node name="Flash" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 1.0
offset_right = 2.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("8")

[node name="Resource Viewport" type="SubViewportContainer" parent="."]
material = SubResource("ShaderMaterial_0whk0")
custom_minimum_size = Vector2(228, 336)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -42.0
offset_top = -78.0
offset_right = -42.0
offset_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(114, 168)
mouse_filter = 2

[node name="SubViewport" type="SubViewport" parent="Resource Viewport"]
transparent_bg = true
handle_input_locally = false
canvas_item_default_texture_filter = 0
size = Vector2i(228, 336)
render_target_update_mode = 4

[node name="Art" type="Control" parent="Resource Viewport/SubViewport"]
custom_minimum_size = Vector2(228, 186)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -78.0
offset_top = -93.0
offset_right = 150.0
offset_bottom = 93.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(114, 168)

[node name="Front" type="Control" parent="Resource Viewport/SubViewport/Art"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -156.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(114, 168)

[node name="ResourceValue" type="TextureRect" parent="Resource Viewport/SubViewport/Art/Front"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -96.0
offset_top = -48.0
offset_right = -96.0
offset_bottom = 174.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("9")

[node name="SubViewportContainer" type="SubViewportContainer" parent="Resource Viewport/SubViewport/Art/Front/ResourceValue"]
custom_minimum_size = Vector2(78, 78)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 72.0
offset_top = 30.0
offset_right = -78.0
offset_bottom = -144.0
grow_horizontal = 2
grow_vertical = 2
stretch = true
stretch_shrink = 3

[node name="SubViewport" type="SubViewport" parent="Resource Viewport/SubViewport/Art/Front/ResourceValue/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(26, 26)
render_target_update_mode = 0

[node name="ResourceLabel" type="Label" parent="Resource Viewport/SubViewport/Art/Front/ResourceValue/SubViewportContainer/SubViewport"]
custom_minimum_size = Vector2(16, 0)
offset_left = 6.0
offset_top = 8.0
offset_right = 22.0
offset_bottom = 20.0
theme_override_colors/font_color = Color(0.9686269760131836, 1, 0.9725490212440491, 1)
theme_override_colors/font_outline_color = Color(0.05490199849009514, 0.06666669994592667, 0.062745101749897, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 9
theme_override_font_sizes/font_size = 12
text = "2"
horizontal_alignment = 1

[node name="ScoreValue" type="TextureRect" parent="Resource Viewport/SubViewport/Art/Front"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -96.0
offset_top = -48.0
offset_right = -96.0
offset_bottom = 174.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10")

[node name="SubViewportContainer" type="SubViewportContainer" parent="Resource Viewport/SubViewport/Art/Front/ScoreValue"]
custom_minimum_size = Vector2(78, 78)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 72.0
offset_top = 30.0
offset_right = -78.0
offset_bottom = -144.0
grow_horizontal = 2
grow_vertical = 2
stretch = true
stretch_shrink = 3

[node name="SubViewport" type="SubViewport" parent="Resource Viewport/SubViewport/Art/Front/ScoreValue/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(26, 26)
render_target_update_mode = 4

[node name="ScoreLabel" type="Label" parent="Resource Viewport/SubViewport/Art/Front/ScoreValue/SubViewportContainer/SubViewport"]
custom_minimum_size = Vector2(16, 0)
offset_left = 6.0
offset_top = 8.0
offset_right = 22.0
offset_bottom = 20.0
theme_override_colors/font_color = Color(0.9686269760131836, 1, 0.9725490212440491, 1)
theme_override_colors/font_outline_color = Color(0.05490199849009514, 0.06666669994592667, 0.062745101749897, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 9
theme_override_font_sizes/font_size = 12
text = "1"
horizontal_alignment = 1
